--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -458,12 +458,17 @@ a{
 	outline: none;
 }
 
+
 .start .contacts{
   position: relative;
   color: #676767;
   padding-left: 0;
   top: 94px;
   left: 39px;
+}
+
+body:nth-of-type(1) .contacts{
+  left: 38px;
 }
 
 .start .contacts .phone_email{
