--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,12 @@
-<% single_line_container :class => 'contacts' do %>
-	<% content_tag :div, :class => 'address' do %>
-		<%= content_tag :div, '83102, г. Донецк, ул. Стадионная, 1 "О"' %>
-		<%= content_tag :div, 'e-mail: BAUkraine@mail.ru' %>
-	<% end -%>
-	<% content_tag :div, :class => 'phone_email' do %>
-		<%= content_tag :div, 'тел: (066) 66-11-980' %>
-		<%= content_tag :div, 'тел/факс: (062) 385-10-28' %>
-	<% end -%>
+<% content_tag :div, :class => 'contacts' do %>
+  <% single_line_container  do %>
+  	<% content_tag :div, :class => 'address' do %>
+  		<%= content_tag :div, '83102, г. Донецк, ул. Стадионная, 1 "О"' %>
+  		<%= content_tag :div, 'e-mail: BAUkraine@mail.ru' %>
+  	<% end -%>
+  	<% content_tag :div, :class => 'phone_email' do %>
+  		<%= content_tag :div, 'тел: (066) 66-11-980' %>
+  		<%= content_tag :div, 'тел/факс: (062) 385-10-28' %>
+  	<% end -%>
+  <% end -%>
 <% end -%>
