--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,22 +25,18 @@
 				<% end %>
 						
 				<%=  content_tag :div, top_menu, :class => "top_menu" %>
------------------------------------------------------------------
+
   			<% content_tag :div, :class => "top_info" do %>
-  				<%=  yield(:top_info) || image_tag('boys_and_car.png', :class => 'default_img') %>
+  				<%=  yield(:top_info) || image_tag('photo_main.png') %>
   			<% end -%>
 		
-  		<% single_line_container do %>
-			
-  			<% left_hi_image =  yield(:left_hi) || 'wish_health.png' %>
-  			<%= image_tag left_hi_image, :class => 'left_hi' %>
-		
-  			<% content_tag :div, :class => 'content' do %>
-  				<%= content_tag :span, flash[:notice], :class => 'success_note' %>
-  				<%= content_tag :span, flash[:alert], :class => 'error_note' %>
-  		    <%= yield %>
+		    <% content_tag :div, :class => 'content_wrapper' do %>
+    			<% content_tag :div, :class => 'content' do %>
+    				<%= content_tag :span, flash[:notice], :class => 'success_note' %>
+    				<%= content_tag :span, flash[:alert], :class => 'error_note' %>
+    		    <%= yield %>
+    			<% end -%>
   			<% end -%>
-  		<% end -%>
 
       <%= render :partial => '/layouts/basement' %>
     </div>
