--- a/app/views/start/index.html.erb
+++ b/app/views/start/index.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :body_class, ' start ' %>
 <div class='big_logo'>
   <%= render :partial => '/layouts/slogan' %>
-  <%= link_to '', home_index_path, :class => 'home_link' %>
+  <%= link_to '', root_path, :class => 'home_link' %>
   <%= render :partial => '/layouts/footer' %>
 </div>
