--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,14 +5,14 @@
 <ul class='list'>
   <% @events.each do |event| %>
   	<li>
-  		<%= link_to event.created_at, '#', :class => 'item' %>
+  		<%= link_to date_format(event.created_at), '#', :class => 'item' %>
   		<%= link_to event.title, '#', :class => 'item' %>
   		<% for_admin do %>
 		    <%= link_to image_tag('pencil.png'), edit_event_path(event) %>
 		    <%= link_to image_tag('delete.png'), event, :confirm => 'Удалить новость?', :method => :delete %> 
 			<% end -%>
 			
-  		<%= content_tag :div, event.body, :class => "text hidden" %>
+  		<%= content_tag :div, textilize(event.body), :class => "text hidden" %>
   	</li>
   <% end -%>
 </ul>
