--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,10 +1,1 @@
-<% semantic_form_for(@event) do |f| %>
-  <%= f.error_messages %>
-	<% f.inputs :title => 'Create/Edit News' do %>
-		<%= f.input :title %>
-		<%= f.input :body %>
-		<%= f.buttons %>
-	<% end -%>
-<% end %>
-
-<%= link_to 'Back', events_path %>
+<%= render :partial => 'form' %>
