--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -359,7 +359,22 @@ a{
 
 .contact .content {
 	margin-bottom: 30px;
-	
+}
+
+/**************************************** events *************************************/
+
+.events ul li{
+  list-style: none;
+  margin-top: 30px;
+}
+
+.events ul a{
+  text-decoration: none;
+}
+
+.events ul a.date{
+  display: block;
+  color: #FAFA00;
 }
 
 /***************************************start***********************************************/
