--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,3 +15,11 @@
 	 горно-лесистой местности,  приобретенный за время прохождения службы в антитеррористических подразделениях СБУ, подразделениях специальной разведки
 	  МО Украины.
 <% end -%>
+
+<div class='licenzies'>
+  <h4>Наши лицензии:</h4>
+  <% licenzies.each do |photo| %>
+    <%= link_to image_tag(photo.avatar.url(:medium)), photo.avatar.url(:big)  %>
+  <% end -%>
+</div>
+ 
