Added lecense preview

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 		<%= stylesheet_link_tag 'scaffold' %>
 		<%= stylesheet_link_tag 'jqModal' %>
 		<%= stylesheet_link_tag 'jquery.ad-gallery' %>
+		<%= stylesheet_link_tag 'highslide' %>
     <%= stylesheet_link_tag 'application' %>
 
   </head>
