--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.error_messages %>
 	<% f.inputs :title => 'Create/Edit Gallery' do %>
 		<%= f.input :name %>
+		<%= f.input :visible %>
 		<%= f.buttons %>
 	<% end -%>
 
