--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,8 +19,7 @@
 <div class='licenzies'>
   <h4>Наши лицензии:</h4>
   <% licenzies.each do |photo| %>
-    <% link_to image_tag(photo.avatar.url(:medium)), photo.avatar.url(:big)  %>
-    <%= link_to image_tag(photo.avatar.url(:medium)), photo.avatar.url(:big), :class => 'highslide', :title => "Увеличить" %>
+    <%= link_to image_tag(photo.avatar.url(:medium)), photo.avatar.url(:licen), :class => 'highslide', :title => "Увеличить" %>
   <% end -%>
 </div>
  
