--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,8 +19,10 @@
 <div class='licenzies'>
   <h4>Наши лицензии:</h4>
   <% licenzies.each do |photo| %>
-    <%= link_to image_tag(photo.avatar.url(:medium)), photo.avatar.url(:licen), :class => 'highslide', :title => "Увеличить" %>
-    <div><%= photo.title %></div>
+    <div>
+      <%= link_to image_tag(photo.avatar.url(:medium)), photo.avatar.url(:licen), :class => 'highslide', :title => "Увеличить" %>
+      <div><%= photo.title %></div>
+    </div>
   <% end -%>
 </div>
  
