--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -204,6 +204,10 @@ a{
   text-align: center;
 }
 
+.home .licenzies > div{
+  display: inline-block;
+}
+
 .home .licenzies h4{
   text-align: center;
 }
