Design on education

--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -1,11 +1,7 @@
 <%= content_for :body_class, " education " %>
 
 <div class='legend'>
-	Подготовка специалистов в области личной охраны по различным программам;
-</div>
-
-<div class='title'>
-В России деятельность частных охранников, к которым относятся и лица, оказывающие услуги по личной охране (телохранители), регулируется Законами РФ. В России деятельность частных охранников, к которым относятся и лица, оказывающие услуги по личной охране (телохранители), регулируется Законами РФ. В России деятельность частных охранников, к которым относятся и лица, оказывающие услуги по личной охране (телохранители), регулируется Законами РФ.В России деятельность частных охранников, к которым относятся и лица, оказывающие услуги по личной охране (телохранители), регулируется Законами РФ. В России деятельность частных охранников, к которым относятся и лица, оказывающие услуги по личной охране (телохранители), регулируется Законами РФ.
+	Подготовка специалистов в области личной охраны по различным программам:
 </div>
 
 <ul class='list'>
