--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -6,8 +6,8 @@
 				<%= image_tag photo.avatar.url(:middle)%>
 				<%= content_tag :div, date_format(photo.created_at), :class => 'date' %>
 				<% content_tag :div do %>
-					<%= content_tag :span, photo.gallery.name, :class => 'name' %>
-					<%= link_to 'Смотреть&nbsp;больше', photo.gallery %>
+					<%= content_tag :span, photo.photoable.name, :class => 'name' %>
+					<%= link_to 'Смотреть&nbsp;больше', photo.photoable %>
 				<% end -%>
 			<% end -%>
 		<% end -%>
