--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -352,7 +352,6 @@ a{
 	margin-left: 20px;
 }
 
-
 /**********************************CONTACT***********************************/
 
 .contact .row{
@@ -390,6 +389,10 @@ a{
   color: #FAFA00;
 }
 
+.events .text ul li {
+  margin: 0 0 0 20px;
+  list-style-type: disc;
+}
 /***************************************start***********************************************/
 
 .start .main{
