--- a/app/views/events/photos/index.html.erb
+++ b/app/views/events/photos/index.html.erb
@@ -15,6 +15,8 @@
 	<% @event.photos.each do |photo| %>
 		<% content_tag :div, :class => 'item' do %>
 			<%= image_tag(photo.avatar.url(:medium)) %>
+			<%= link_to(image_tag('delete.png'), event_photo_path(photo.photoable, photo), :confirm => 'Удалить фотограйию?', :method => :delete) %>
+      
 		<% end -%>
 	<% end -%>
 <% end -%>
