Changes on the cross-gallery page

--- a/app/views/cross_gallery/index.html.erb
+++ b/app/views/cross_gallery/index.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :body_class, "cross_gallery" %>
 <div class='ways'>
-  <%= link_to image_tag('video_icon.png'), video_gallery_index_path %>
-  <%= link_to image_tag('photo_icon.png'), galleries_path %>
+  <%= link_to "Видео", video_gallery_index_path %>
+  <%= link_to "Фото", galleries_path %>
 </div>
