--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,19 +1,19 @@
-<%= content_for :body_class, " show_gallery " %>
+<%= content_for :body_class, " show_gallery gallery_content " %>
 
-
-<% content_for :gallery_content do %>
-
-	<%= content_tag :div, date_format(@gallery.created_at) %>
-	<%= content_tag :div, h(@gallery.name), :class => 'gallery_name legend' %>
+<% content_for :top_info do %>
+  <%= image_tag 'photo_for_gallery.png' %>
+<% end -%>
 
 	<% for_admin do %>
 		<%= link_to 'Add Photo', new_gallery_photo_path(@gallery) if @gallery %>
 	<% end -%>
 
+	<%= content_tag :div, h(@gallery.name), :class => 'gallery_name legend' %>
+
 	<% content_tag :div, :class => 'photos' do %>
 		<% @photos.each do |photo| %>
 			<% content_tag :div, :class => 'item' do %>
-				<%= link_to image_tag(photo.avatar.url(:medium)), "#", :class => 'jqModal start_gallery', :photo_id => photo.id %>
+				<%= link_to image_tag(photo.avatar.url(:middle)), "#", :class => 'jqModal start_gallery', :photo_id => photo.id %>
 				<% for_admin do %>
           <% content_tag :div do %>
             <%= link_to image_tag('pencil.png'), edit_gallery_photo_path(photo.photoable, photo) %>
@@ -24,9 +24,4 @@
 		<% end -%>
 	<% end -%>
 
-<% end -%>
-
 <%= render 'photo_dialog', :photos => @photos %>
-
-
-<%= render :partial => 'content' %>
