--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,15 @@
 <%= content_for :body_class, "home" %>
   
 <% content_tag :div do %>
-	"АКАДЕМИЯ ТЕЛОХРАНИТЕЛЕЙ УКРАИНЫ" создана в 2010 году с целью проведения  обучения, повышения квалификации, тренингов, семинаров  - с  сотрудниками
-	 личной охраны, инкассаторами,  военнослужащими специальных подразделений МО, МВД, Службы безопасности  Украины. 
+"АКАДЕМИЯ ТЕЛОХРАНИТЕЛЕЙ УКРАИНЫ" создана в 2010 году с целью проведения обучения, повышения квалификации, тренингов, семинаров - с сотрудниками личной охраны, инкассаторами, военнослужащими специальных подразделений МО, МВД, Службы безопасности Украины.
 	<% end -%>
 
 	<% content_tag :div do %>
-	"АКАДЕМИЯ ТЕЛОХРАНИТЕЛЕЙ УКРАИНЫ"     является      официальным учебным центром   «НАЦИОНАЛЬНОЙ ПРОФЕССИОНАЛЬНОЙ ЛИГИ ТЕЛОХРАНИТЕЛЕЙ УКРАИНЫ» 
-	(NPBL Ukraine).
+  АКАДЕМИЯ ТЕЛОХРАНИТЕЛЕЙ УКРАИНЫ создана ветеранами антиреррористического подразделения "Альфа" СБУ специальной разведки МО Украины, членами "Национальной Профессиональной Лиги телохранителей Украины"
 	<% end -%>
 	
 <% content_tag :p do %>
-	Инструктора Академии имеют богатый опыт в области обеспечения личной безопасности, проведении специальных операций в городских условиях, в условиях
-	 горно-лесистой местности,  приобретенный за время прохождения службы в антитеррористических подразделениях СБУ, подразделениях специальной разведки
-	  МО Украины.
+  Инструктора Академии имеют богатый опыт в области обеспечения личной безопасности, проведении специальных операций в городских условиях, в условиях горно-лесистой местности, приобретенный за время прохождения службы.
 <% end -%>
 
 <div class='licenzies'>
