--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -1,60 +1,17 @@
 <%= content_for :body_class, " education " %>
 
-<div class='legend'>
-	Подготовка специалистов в области личной охраны по различным программам:
-</div>
+<div class='legend'>Обучение и тренинги:</div>
 
 <ul class='list'>
-	<% list = [
-		{
-			:item => "Подготовка охранников и инкассаторов;",
-			:content => "Подготовка охранников и инкассаторов Подготовка охранников и инкассаторов Подготовка охранников и инкассаторов Подготовка охранников и инкассаторов Подготовка охранников и инкассаторов Подготовка охранников и инкассаторов Подготовка охранников и инкассаторов Подготовка охранников и инкассаторов "
-		},
-		{
-			:item => "Специализированные курсы и семинары по всем навыкам телохранителя;",
-			:content => ""
-		},
-		{
-			:item => "Постоянный тренинг сотрудников персональной охраны, как на базе Академии, так и на территории Заказчика;",
-			:content => ""
-		},
-		{
-			:item => "Легководолазная подготовка сотрудников личной охраны (водолаз-телохранитель);",
-			:content => ""
-		},
-		{
-			:item => "Подготовка и обучение групп ГБР (групп быстрого реагирования);",
-			:content => ""
-		},
-		{
-			:item => "Подготовка поисково-патрульных группы по охране удаленных коммуникаций и объектов;",
-			:content => ""
-		},
-		{
-			:item => "Подготовка команд морского сопровождения и охраны;",
-			:content => ""
-		},
-		{
-			:item => "Подготовка сотрудников антитеррористических подразделений и разведывательных подразделений министерства обороны;",
-			:content => ""
-		},
-		{
-			:item => "Специальная альпиниская подготовка разведывательных и антитеррористических подразделений;",
-			:content => ""
-		},
-		{
-			:item => "Специализированные курсы по выживанию в горно-лесистой местности.",
-			:content => ""
-		}
-		
-		] %>
-		
-		<% list.each do |item| %>
-			<li>
-				- 
-				<%= link_to item[:item], '#', :class => 'item' %>
-				<%= content_tag :div, item[:content], :class => "text hidden" %>
-			</li>
-		<% end -%>
-
+  <li>- Подготовка специалистов в области личной охраны по различным программам;</li>
+  <li>- Подготовка охранников и инкассаторов;</li>
+  <li>- Специализированные курсы и семинары по всем навыкам телохранителя;</li>
+  <li>- Постоянный тренинг сотрудников персональной охраны, как на базе Академии, так и на территории Заказчика;</li>
+  <li>- Легководолазная подготовка сотрудников личной охраны (водолаз-телохранитель);</li>
+  <li>- Подготовка и обучение групп ГБР (групп быстрого реагирования);</li>
+  <li>- Подготовка поисково-патрульных группы по охране удаленных коммуникаций и объектов;</li>
+  <li>- Подготовка команд морского сопровождения и охраны;</li>
+  <li>- Подготовка сотрудников антитеррористических подразделений и разведывательных подразделений министерства обороны;</li>
+  <li>- Специальная альпиниская подготовка разведывательных и антитеррористических подразделений;</li>
+  <li>- Специализированные курсы по выживанию в горно-лесистой местности.</li>
 </ul>
