--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,5 +1,9 @@
 <%= content_for :body_class, ' contact ' %>
 
+<% content_for :top_info do %>
+  <%= image_tag 'contacts.png' %>
+<% end -%>
+
 <% data = 
 	[
 		{'Адрес:'               => '83102, г. Донецк, ул. Стадионная, 1 "O"'},
