--- a/app/views/cross_gallery/index.html.erb
+++ b/app/views/cross_gallery/index.html.erb
@@ -1,7 +1,7 @@
 <%= content_for :body_class, "cross_gallery" %>
 
 <% content_for :top_info do %>
-  <%= image_tag 'photo_for_gallery.png' %>
+  <%= image_tag 'gallery.jpg' %>
 <% end -%>
 
 <div class='ways'>
