--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -1,5 +1,9 @@
 <%= content_for :body_class, " education " %>
 
+<% content_for :top_info do %>
+  <%= image_tag 'education.jpg' %>
+<% end -%>
+
 <div class='legend'>Обучение и тренинги:</div>
 
 <ul class='list'>
