--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -13,7 +13,7 @@
 	<% content_tag :div, :class => 'photos' do %>
 		<% @photos.each do |photo| %>
 			<% content_tag :div, :class => 'item' do %>
-				<%= link_to image_tag(photo.avatar.url(:middle)), "#", :class => 'jqModal start_gallery', :photo_id => photo.id %>
+				<%= link_to image_tag(photo.avatar.url(:medium)), "#", :class => 'jqModal start_gallery', :photo_id => photo.id %>
 				<% for_admin do %>
           <% content_tag :div do %>
             <%= link_to image_tag('pencil.png'), edit_gallery_photo_path(photo.photoable, photo) %>
