--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,9 @@
 <%= content_for :body_class, "home" %>
+
+<% content_for :top_info do %>
+  <%= image_tag 'akademija.jpg' %>
+<% end -%>
+
   
 <% content_tag :div do %>
 "АКАДЕМИЯ ТЕЛОХРАНИТЕЛЕЙ УКРАИНЫ" создана в 2010 году с целью проведения обучения, повышения квалификации, тренингов, семинаров - с сотрудниками личной охраны, инкассаторами, военнослужащими специальных подразделений МО, МВД, Службы безопасности Украины.
