--- a/app/views/kits/index.html.erb
+++ b/app/views/kits/index.html.erb
@@ -1,2 +1,9 @@
+<% content_for :top_info do %>
+  <%= image_tag 'kits.jpg' %>
+<% end -%>
+
+
 <p>Страница в стадии разработки</p>
 <% render :partial => 'content' %>
+
+
