--- a/app/views/service/index.html.erb
+++ b/app/views/service/index.html.erb
@@ -1,5 +1,9 @@
 <%= content_for :body_class, ' service ' %>
 
+<% content_for :top_info do %>
+  <%= image_tag 'service.jpg' %>
+<% end -%>
+
 <%= content_tag :div, '"АКАДЕМИЯ ТЕЛОХРАНИТЕЛЕЙ УКРАИНЫ" предоставляет следующие виды охранных услуг:' %>
 <ul>                                                               
 
